--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@rails/webpacker": "^4.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^2.1.0",
+    "expose-loader": "^0.7.5",
+    "jquery": "^3.3.1",
     "postcss-nested": "^4.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "resolve": "^1.10.0",
+    "webpack-jquery-ui": "^2.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
